--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
             </div>
         </div>
     </main>
+    <!-- Firebase SDKs -->
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+
     <script src="js/script.js"></script>
 </body>
 </html>
