--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         </div>
     </main>
     <!-- Firebase SDKs -->
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-analytics.js"></script>
 
     <script src="js/script.js"></script>
 </body>
