--- a/details.html
+++ b/details.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dustbin Details - SmartBin Monitor</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Dustbin Details - SmartBin Monitor</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+  <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-    <div class="details-container">
-        <header class="details-header">
-            <h1><i class="fa-solid fa-trash-can"></i> <span id="dustbin-id">Dustbin bin-001</span></h1>
-            <p>Real-time fill level monitoring.</p>
-        </header>
+  <div class="details-container">
+    <header class="details-header">
+      <h1><i class="fa-solid fa-trash-can"></i> <span id="dustbin-id">Dustbin bin-001</span></h1>
+      <p>Real-time fill level monitoring.</p>
+    </header>
 
-        <main class="details-main">
-            <div class="fill-level-card">
-                <h2><i class="fa-solid fa-fill-drip"></i> Current Fill Level</h2>
-                <p>Status: <span id="dustbin-status" class="status-medium">Medium</span></p>
-                <div class="fill-percentage">
-                    <span id="fill-level-value">66</span>%
-                </div>
-                <p class="fill-level-text">Full</p>
-                <div class="progress-bar">
-                    <div id="progress-bar-inner" class="progress-bar-inner" style="width: 66%;"></div>
-                </div>
-                <p class="update-info">Updates automatically every 2 seconds.</p>
-            </div>
-        </main>
+    <main class="details-main">
+      <div class="fill-level-card">
+        <h2><i class="fa-solid fa-fill-drip"></i> Current Fill Level</h2>
+        <p>Status: <span id="dustbin-status" class="status-medium">Medium</span></p>
+        <div class="fill-percentage">
+          <span id="fill-level-value">66</span>%
+        </div>
+        <p class="fill-level-text">Full</p>
+        <div class="progress-bar">
+          <div id="progress-bar-inner" class="progress-bar-inner" style="width: 66%;"></div>
+        </div>
+        <p class="update-info">Updates automatically every 2 seconds.</p>
+      </div>
+    </main>
 
-        <footer>
-            <a href="index.html" class="btn btn-back"><i class="fa-solid fa-arrow-left"></i> Back to Map View</a>
-            <p class="footer-text">SmartBin Project © 2025</p>
-        </footer>
-    </div>
-    <script src="js/script.js"></script>
+    <footer>
+      <a href="index.html" class="btn btn-back"><i class="fa-solid fa-arrow-left"></i> Back to Map View</a>
+      <p class="footer-text">SmartBin Project © 2025</p>
+    </footer>
+  </div>
+
+  <!-- Firebase SDKs loaded FIRST -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+
+  <!-- Your Script -->
+  <script src="js/script.js"></script>
 </body>
-</html> 
+</html>
