--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
     </div>
   </main>
 
-  <!-- Firebase SDKs FIRST -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+ <!-- Firebase SDKs -->
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 
   <!-- Your script AFTER Firebase SDK -->
   <script src="js/script.js"></script>
