--- a/details.html
+++ b/details.html
@@ -36,8 +36,9 @@
   </div>
 
   <!-- Firebase SDKs loaded FIRST -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+ <!-- Firebase SDKs -->
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 
   <!-- Your Script -->
   <script src="js/script.js"></script>
